--- a/intelligentlogisticUI/index.html
+++ b/intelligentlogisticUI/index.html
@@ -8,5 +8,13 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript">
+        window._AMapSecurityConfig = {
+            securityJsCode:'2a1e587cec3f4e6953566707bdfe1c49',
+        }
+    </script>
+<!--    <script type="text/javascript" src="https://webapi.amap.com/maps?v=2.0&key=c84f72f82ba9a3d7b0c8f38e22271811"></script>-->
+<!--    <script src="//webapi.amap.com/ui/1.1/main.js"></script>-->
+
   </body>
 </html>
